--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       if (cactusLeft < 35 && cactusLeft > 0 && dinoTop >= 150) {
         // collision
         console.log(dinoTop)
-        alert("This is what happens to trees every day!")
+        alert("This is what happens to trees every day! See what exactly is destroying them.")
         window.location = "trees.html"
       }
     }, 10);
