--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <style>
     body {
       text-align: center;
-      background: url("photo.avif");
+      background: url("photo.png");
       margin: 0;
       padding: 0;
       width: 100vw;
@@ -129,7 +129,7 @@
       if (cactusLeft < 35 && cactusLeft > 0 && dinoTop >= 150) {
         // collision
         console.log(dinoTop)
-        alert("This is what happens to trees every day! See what exactly is destroying them.")
+        alert("This is what happens to trees every day!")
         window.location = "trees.html"
       }
     }, 10);
