--- a/trees.html
+++ b/trees.html
@@ -15,9 +15,14 @@
             margin: 0;
             padding: 0;
             position: relative;
-            background: url("photo.avif");
+            background: url("photo.png");
             height: 100vh;
             overflow-x: hidden;
+        }
+
+        a {
+            color: white;
+            transform: rotate()
         }
 
         #header {
@@ -85,6 +90,7 @@
         }
     </style>
     <br>
+    <a href="index.html">&#10149;</a>
     <h1 id="header">Save the Trees</h1>
     <div id="informationDiv">
         <h2 class="sectionHeader">Info</h2>
