--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       margin: auto;
       margin-top: 200px;
       position: relative;
-      overflow-y: hidden;
+      overflow: hidden;
     }
     #dino {
       width: 67px;
@@ -66,7 +66,7 @@
       }
 
       50% {
-        top: 25px;
+        top: 10px;
       }
 
       100% {
@@ -81,14 +81,14 @@
       left: 130px;
       background-image: url("tree.png");
       background-size: 150px 120px;
-      animation: block 3s infinite linear;
+      animation: block 3.5s infinite linear;
     }
     @keyframes block {
       0% {
-        left: 580px;
+        left: 900px;
       }
       100% {
-        left: -100px;
+        left: -200px;
       }
     }
   </style>
